EncryptionService throws GeneralSecurityException, remove constructor with all arguments and enhance integration test application.properties